support for optional/retry/wait/priority/escalations
